Fix image alignment on Past.html
- Add vertical-align: top to td elements in CSS
- Remove extra <br> tag in first table cell that caused misalignment

--- a/Dfc.css
+++ b/Dfc.css
@@ -103,6 +103,10 @@ table{
   padding-left: 20%;
 }
 
+td{
+  vertical-align: top;
+}
+
 .container{
   width: 90%;
   padding-left: 20%;
